[package]
name = "swift_tool_box"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
chrono = "0.4.38"
clap = { version = "4.5.6", features = ["derive"] }
env_logger = "0.11.3"
flate2 = "1.0.28"
log = "0.4.21"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"

